data/derived/fa15/progs/unify/prog3682.ml.out
Characters 46-55:
  let rec appZero x l = if x > 0 then l@[] else appZero x-1 l;;
                                                ^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int
